codepkg/objects/Agency_Admin_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Administrative_Rate_Indirect_Cost_Direct__c</fullName>
        <label>Administrative Rate(Indirect/Direct)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Total_Indirect_Direct__c</fullName>
        <label>Grand  Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Administrative Rates</relationshipLabel>
        <relationshipName>Agency_Administrative_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_For_Use_In__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data For Use In</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FY From</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FY To</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_End_Date_less_than_Start_Date__c</fullName>
        <formula>IF( End_Date__c &lt; TODAY() , True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is End Date less than Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACS_ID__c</fullName>
        <formula>Agency__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_From_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised From Id</label>
        <referenceTo>Agency_Admin_Rates__c</referenceTo>
        <relationshipLabel>Agency Administrative Rates</relationshipLabel>
        <relationshipName>Agency_Administrative_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Amount__c</fullName>
        <label>Direct Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Indirect_Amount__c</fullName>
        <label>Indirect Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Agency Administrative Rates</label>
    <listViews>
        <fullName>Admin_Rates_Pending_for_Approval</fullName>
        <columns>MACS_ID__c</columns>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Administrative_Rate_Indirect_Cost_Direct__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>Pending Review Queue</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Direct_Amount__c</columns>
        <columns>Total_Indirect_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MARS_AdminRatesMembers_Agency_Admin_Rates</fullName>
        <filterScope>Queue</filterScope>
        <label>MARS_AdminRatesMembers</label>
        <queue>MARS_AdminRatesMembers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Administrative Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Administrative Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>